# fluere

./: .gitignore  flake.nix
api/: pyproject.toml
api/src/fluere/: app.py
api/src/fluere/api/: router.py  schema.py
api/src/fluere/core/: __init__.py  builtin.py  node.py
api/tests/fluere/api/: conftest.py  test_execute.py  test_signatures.py
api/tests/fluere/core/: test_nodes.py
app/: package-lock.json  package.json
app/src/: app.tsx
app/src/components/: flow.tsx
app/src/components/nodes/: default.tsx
app/src/stores/: flow.ts
app/src/types/: flow.ts
app/src/types/nodes/: default.tsx
