[project]
name = "fluere"
dynamic = ["version"]
description = ""
readme = "README.md"
authors = [
    { name = "Itzik", email = "74200683+itzik1058@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = ["fastapi[standard]>=0.115.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/fluere/__init__.py"

[tool.uv]
dev-dependencies = ["mypy>=1.13.0", "ruff>=0.7.1"]

[tool.ruff.lint]
select = ["F", "E", "I", "N", "UP", "A", "C4", "RUF"]

[tool.mypy]
exclude = [".venv"]

ignore_missing_imports = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
